--- a/index.css
+++ b/index.css
@@ -1562,10 +1562,10 @@ canvas:focus {
 	.my-card {
 		border-radius: 0;
 		box-shadow: none;
-		min-width: 100%;
-		min-height: 100%;
-		width: 100%;
-		height: 100%;
+		min-width: 100vw;
+		min-height: 100vh;
+		width: 100vw;
+		height: 100vh;
 		position: absolute;
 		top: 0;
 		left: 0;
